@@ -1,5 +1,8 @@
 2006-05-27  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
+	* lily/system.cc (get_paper_systems): uniq all_elements_ , to
+	prevent duplicated broken items in output.
+
 	* scm/framework-eps.scm (output-classic-framework): only dump if
 	dump-signatures is set.
 
